--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="top-container">
       <img  class ="cloud" src="img/cloud.png" alt="this is a cloud">
-      <h1 class="name">I'm Yash</h1>
+      <h1 class="name">I'm Yash Chauhan</h1>
       <h3 class="subheading">I am a Programmer.</h3>
       <img class="bottom-cloud"src="img/cloud.png" alt="this is a cloud">
       <img class="city" src="img/final city1.png" alt="mountain-img">
